force-app/main/default/objects/Photo__c/fields/Photo_Description__c.field-meta.xml
<CustomField>
    <fullName>Photo_Description__c</fullName>
    <label>Photo Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>