force-app/main/default/objects/Photo__c/fields/Photo_Url_1__c.field-meta.xml
<CustomField>
    <fullName>Photo_Url_1__c</fullName>
    <label>Photo Url 1</label>
    <type>Url</type>
</CustomField>