force-app/main/default/objects/Photo__c/fields/Photo_Url_2__c.field-meta.xml
<CustomField>
    <fullName>Photo_Url_2__c</fullName>
    <label>Photo Url 2</label>
    <type>Url</type>
</CustomField>