force-app/main/default/objects/Photo__c/fields/Photo_Url_3__c.field-meta.xml
<CustomField>
    <fullName>Photo_Url_3__c</fullName>
    <label>Photo Url 3</label>
    <type>Url</type>
</CustomField>