force-app/main/default/objects/Photo__c/fields/Redirect_Page_Url_2__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Page_Url_2__c</fullName>
    <label>Redirect Page Url 2</label>
    <type>Url</type>
</CustomField>