force-app/main/default/objects/Photo__c/fields/Redirect_Page_Url_3__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Page_Url_3__c</fullName>
    <label>Redirect Page Url 3</label>
    <type>Url</type>
</CustomField>