force-app/main/default/objects/Photo__c/fields/See_Details_Url__c.field-meta.xml
<CustomField>
    <fullName>See_Details_Url__c</fullName>
    <label>See Details Url</label>
    <type>Url</type>
</CustomField>